--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,16 +1,14 @@
 {
-    "name": "Rust Environment",
-    "build": {
-      "dockerfile": "Dockerfile"
-    },
-    "settings": { 
-      "terminal.integrated.shell.linux": "/bin/bash"
-    },
-    "extensions": [
-      "rust-lang.rust"
-    ],
-    "forwardPorts": [],
-    "postCreateCommand": "rustup update && rustup component add rls rust-analysis rust-src",
-    "remoteUser": "root"
-  }
-  
+  "name": "Rust Environment",
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "rust-lang.rust"
+      ]
+    }
+  },
+  "remoteUser": "root"
+}
