add Rust_LLMTokenizer as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rustlings"]
     path = rustlings
     url = https://github.com/xaziaver/rustlings.git
+[submodule "Rust_LLMTokenizer"]
+	path = Rust_LLMTokenizer
+	url = https://github.com/xaziaver/Rust_LLMTokenizer.git
